--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,13 @@
 </head>
 <body>
 
-<%= yield %>
+  <%= render 'layouts/header' %>
+
+  <div class='container'>
+    <%= yield %>
+  </div>
+
+  <%= debug(params) if Rails.env.development? %>
 
 </body>
 </html>
