--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,7 @@
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
  @import 'bootstrap.min';
+ @import 'colors';
+ @import 'global';
+
+ @import 'signup';
