--- a/app/assets/javascripts/templates/signup_form/account.html
+++ b/app/assets/javascripts/templates/signup_form/account.html
@@ -1,13 +1,13 @@
 <div class="form-group row">
   <div class="col-md-4 col-md-offset-4">
     <label for="email">Email</label>
-    <input type="email" name='email' class='form-control' ng-model='formData.email'>
+    <input type="email" name='email' id='email' class='form-control' ng-model='formData.email'>
 
-    <label for="password">Password</label>
-    <input type="password" name='password' class='form-control' ng-model='formData.password'>
+    <label for="password">Password <i>(At least 8 characters)</i></label>
+    <input type="password" name='password' id='password' class='form-control' ng-model='formData.password'>
 
     <label for="password_confirmation">Password Confirmation</label>
-    <input type="password" name='password_confirmation' class='form-control' ng-model='formData.password_confirmation'>
+    <input type="password" name='password_confirmation' id='password_confirmation' class='form-control' ng-model='formData.password_confirmation'>
   </div>
 </div>
 
