Move header to angular side

--- a/app/assets/javascripts/templates/layouts/header.html
+++ b/app/assets/javascripts/templates/layouts/header.html
@@ -10,8 +10,12 @@
   <div class="navbar-collapse collapse navbar-inverse-collapse">
 
     <ul class="nav navbar-nav navbar-right">
+
+      <li>My account</li>
+
       <li><%= link_to 'How it works', '#' %></li>
       <li><%= link_to 'Get started', '/signup/measurements' %></li>
+
     </ul>
   </div>
 </div>
