--- a/app/assets/javascripts/templates/layouts/header.html
+++ b/app/assets/javascripts/templates/layouts/header.html
@@ -11,10 +11,19 @@
 
     <ul class="nav navbar-nav navbar-right">
 
-      <li>My account</li>
+      <li ng-if='signed_in' class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">My Profile</a></li>
+          <li><a href="#">My Kiqs</a></li>
+          <li><a href="#">Edit Profile</a></li>
+          <li><a ng-click='logout()'>Logout</a></li>
+        </ul>
+      </li>
 
-      <li><%= link_to 'How it works', '#' %></li>
-      <li><%= link_to 'Get started', '/signup/measurements' %></li>
+        <li ng-if='!signed_in'><a href="/login">Login</a></li>
+        <li ng-if='!signed_in'><a href="#">How it works</a></li>
+        <li ng-if='!signed_in'><a href="/signup/measurements">Get started</a></li>
 
     </ul>
   </div>
