--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -3,3 +3,17 @@
   src: url(asset_path('glyphicons-halflings-regular.eot'));
   src: url(asset_path('glyphicons-halflings-regular.eot?#iefix')) format('embedded-opentype'), url(asset_path('glyphicons-halflings-regular.woff')) format('woff'), url(asset_path('glyphicons-halflings-regular.ttf')) format('truetype'), url(asset_path('glyphicons-halflings-regular.svg#glyphicons_halflingsregular')) format('svg');
 }
+
+a {
+  cursor: pointer;
+}
+
+.navbar {
+  a.dropdown-toggle {
+    text-transform: uppercase;
+  }
+}
+
+.form-actions {
+  margin-top: 10px;
+}
