--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body ng-app='sidekiq'>
 
-  <div header></div>
+  <%= render 'layouts/header' %>
 
   <div class='container'>
     <%= yield %>
