Customize login page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
 
       <% else %>
 
-        <li><%= link_to 'Login', new_user_session_path %></li>
+        <li><%= link_to 'Login', new_user_session_path, target: '_self' %></li>
         <li><a href="#">How it works</a></li>
         <li><a href="/signup/measurements">Get started</a></li>
 
