--- a/app/assets/javascripts/templates/signup_form/measurements.html
+++ b/app/assets/javascripts/templates/signup_form/measurements.html
@@ -31,7 +31,7 @@
 
 <div class="form-group row">
   <div class="col-xs-3 col-xs-offset-9">
-    <a ui-sref='signup.needs' class='btn btn-block btn-info'>
+    <a ui-sref='signup.needs' ng-click="checkInput1($event)" class='btn btn-block btn-info'>
       Next Section <span class="glyphicon glyphicon-circle-arrow-right"></span>
     </a>
   </div>
