--- a/app/assets/javascripts/templates/signup_form/needs.html
+++ b/app/assets/javascripts/templates/signup_form/needs.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="col-xs-3 col-xs-offset-6">
-    <a ui-sref='signup.kiqs' class='btn btn-block btn-info'>
+    <a ui-sref='signup.kiqs' ng-click='checkInput2($event)' class='btn btn-block btn-info'>
       Next Section <span class="glyphicon glyphicon-circle-arrow-right"></span>
     </a>
   </div>
