--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Sidekiq</a>
+    <%= link_to 'Sidekiq', root_path, class: 'navbar-brand', target: '_self' %>
   </div>
   <div class="navbar-collapse collapse navbar-inverse-collapse">
 
