Add firstname and lastname to users

--- a/app/assets/javascripts/templates/signup_form/account.html
+++ b/app/assets/javascripts/templates/signup_form/account.html
@@ -8,6 +8,14 @@
 
     <label for="password_confirmation">Password Confirmation</label>
     <input type="password" name='password_confirmation' id='password_confirmation' class='form-control' ng-model='formData.password_confirmation'>
+
+    <hr>
+
+    <label for="firstname">Firstname</label>
+    <input type="text" name='firstname' id='firstname' class='form-control' ng-model='formData.firstname'>
+
+    <label for="lastname">Lastname</label>
+    <input type="text" name='lastname' id='lastname' class='form-control' ng-model='formData.lastname'>
   </div>
 </div>
 
