--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,9 +16,9 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account</a>
           <ul class="dropdown-menu">
-            <li><a href="#">My Profile</a></li>
-            <li><a href="#">My Kiqs</a></li>
-            <li><a href="#">Edit Profile</a></li>
+            <li><a href="/profile">My Profile</a></li>
+            <li><a href="/profile/kiqs">My Kiqs</a></li>
+            <li><a href="/profile/edit">Edit Profile</a></li>
             <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
