--- a/app/assets/javascripts/templates/profile/profile.html
+++ b/app/assets/javascripts/templates/profile/profile.html
@@ -1,2 +1,28 @@
-{{ user.firstname }}
-{{ user.lastname }}
+<div class="row">
+  <div class="col-md-3">
+    <h3>{{ user.stylist.firstname }} {{ user.stylist.lastname }}</h3>
+    <p>Your personal stylist</p>
+  </div>
+
+  <div class="col-md-9">
+
+    <div class="panel panel-default">
+      <div class="panel-body">
+        View your Kiqs
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-body">
+        Add shipping address
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-body">
+        Add credit card
+      </div>
+    </div>
+
+  </div>
+</div>
