Add update for kiqs

--- a/app/assets/javascripts/templates/profile/profile.html
+++ b/app/assets/javascripts/templates/profile/profile.html
@@ -6,23 +6,7 @@
 
   <div class="col-md-9">
 
-    <div class="panel panel-default">
-      <div class="panel-body">
-        View your Kiqs
-      </div>
-    </div>
-
-    <div class="panel panel-default">
-      <div class="panel-body">
-        Add shipping address
-      </div>
-    </div>
-
-    <div class="panel panel-default">
-      <div class="panel-body">
-        Add credit card
-      </div>
-    </div>
+    <div ui-view></div>
 
   </div>
 </div>
