Add links between main profile page and kiq page

--- a/app/assets/javascripts/templates/profile/kiqs.html
+++ b/app/assets/javascripts/templates/profile/kiqs.html
@@ -15,5 +15,8 @@
   <input type="checkbox" value='ClassicKiq' id='ClassicKiq' ng-checked='user.classic_kiq' ng-model='user.classic_kiq'>
   <label for="ClassicKiq">ClassicKiq</label>
 
-  <button type='submit' class='btn btn-block btn-success'>Complete</button>
+  <button type='submit' class='btn btn-success'>Complete</button>
+  <a ui-sref='profile.main' class='btn btn-info'>
+    <span class="glyphicon glyphicon-circle-arrow-left"></span> Back
+  </a>
 </form>
