--- a/app/assets/javascripts/templates/profile/main.html
+++ b/app/assets/javascripts/templates/profile/main.html
@@ -1,6 +1,12 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    View your Kiqs
+    Your Kiqs
+
+    <div>
+      <a ui-sref='profile.kiqs' class='btn btn-info'>
+        View <span class="glyphicon glyphicon-circle-arrow-right"></span>
+      </a>
+    </div>
   </div>
 </div>
 
