--- a/app/assets/javascripts/templates/profile/main.html
+++ b/app/assets/javascripts/templates/profile/main.html
@@ -1,23 +1,9 @@
-<div class="panel panel-default">
-  <div class="panel-body">
-    Your Kiqs
+<div class="row">
+  <aside class="col-md-3">
+    <div ng-include="'profile/partial/stylist.html'"></div>
+  </aside>
 
-    <div>
-      <a ui-sref='profile.kiqs' class='btn btn-info'>
-        View <span class="glyphicon glyphicon-circle-arrow-right"></span>
-      </a>
-    </div>
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-body">
-    Add shipping address
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-body">
-    Add credit card
+  <div class="col-md-9">
+    <div ng-include="'profile/partial/dashboard.html'"></div>
   </div>
 </div>
