--- a/app/assets/javascripts/templates/profile/profile.html
+++ b/app/assets/javascripts/templates/profile/profile.html
@@ -1,9 +1,1 @@
-<div class="row">
-  <aside class="col-md-3">
-    <div ui-view='aside'></div>
-  </aside>
-
-  <div class="col-md-9">
-    <div ui-view='body'></div>
-  </div>
-</div>
+<div ui-view></div>
