Add profile and size edit pages

--- a/app/assets/javascripts/templates/profile/edit_profile.html
+++ b/app/assets/javascripts/templates/profile/edit_profile.html
@@ -1,2 +1,14 @@
-profile edit
-<div ui-view='edit_body'></div>
+<div flash-alert active-class="in alert" class="fade text-center">
+  <span class="alert-message">{{ flash.message }}</span>
+</div>
+
+<form id='profile-form' ng-submit='updateUser()'>
+  <label for="firstname">First name</label>
+  <input type="text" value='firstname' id='firstname' class='form-control' ng-model='user.firstname'>
+
+  <label for="lastname">Last name</label>
+  <input type="text" value='lastname' id='lastname' class='form-control' ng-model='user.lastname'>
+
+
+  <button type='submit' class='btn btn-success'>Complete</button>
+</form>
