--- a/app/assets/javascripts/templates/profile/partial/kiqs_form.html
+++ b/app/assets/javascripts/templates/profile/partial/kiqs_form.html
@@ -2,7 +2,7 @@
   <span class="alert-message">{{ flash.message }}</span>
 </div>
 
-<form id='kiq-form' ng-submit='processKiqForm()'>
+<form id='kiq-form' ng-submit='updateUser()'>
   <input type="checkbox" value='SmartKiq' id='SmartKiq' ng-checked='user.smart_kiq' ng-model='user.smart_kiq'>
   <label for="SmartKiq">SmartKiq</label>
 
