--- a/app/assets/javascripts/templates/signup_form/measurements.html
+++ b/app/assets/javascripts/templates/signup_form/measurements.html
@@ -16,7 +16,7 @@
 
   <div class="col-sm-4">
     <label for="shirt-size">Casual shirt size</label>
-    <select class="form-control" name='shirt-size' ng-model="formData.shirt_size">
+    <select class="form-control" name='shirt-size' ng-model="formData.casual_shirt_size">
       <option value='xs'>XS</option>
       <option value='s'>S</option>
       <option value='m'>M</option>
