--- a/app/assets/javascripts/templates/profile/edit_shipping.html
+++ b/app/assets/javascripts/templates/profile/edit_shipping.html
@@ -1,1 +1,26 @@
-shipping edit
+<div flash-alert active-class="in alert" class="fade text-center">
+  <span class="alert-message">{{ flash.message }}</span>
+</div>
+
+<form id='profile-form' ng-submit='processAddressForm()'>
+  <label for="street_address">Address line 1</label>
+  <input type="text" value='street_address' id='street_address' class='form-control' ng-model='address.street_address'>
+
+  <label for="secondary_address">Address line 2</label>
+  <input type="text" value='secondary_address' id='secondary_address' class='form-control' ng-model='address.secondary_address'>
+
+  <label for="city">City</label>
+  <input type="text" value='city' id='city' class='form-control' ng-model='address.city'>
+
+  <label for="state">State</label>
+  <input type="text" value='state' id='state' class='form-control' ng-model='address.state'>
+
+  <label for="postcode">Postcode</label>
+  <input type="number" value='postcode' id='postcode' class='form-control' ng-model='address.postcode'>
+
+  <button type='submit' class='btn btn-success'>Complete</button>
+</form>
+
+<pre>
+  {{address}}
+</pre>
