Change the concept of kiq

--- a/app/assets/javascripts/templates/profile/main.html
+++ b/app/assets/javascripts/templates/profile/main.html
@@ -1,6 +1,8 @@
 <div class="row">
   <aside class="col-md-3">
     <div ng-include="'profile/partial/stylist.html'"></div>
+
+    <a href="#" class='btn btn-success'>Request a Kiq</a>
   </aside>
 
   <div class="col-md-9">
