--- a/app/assets/javascripts/templates/profile/partial/dashboard.html
+++ b/app/assets/javascripts/templates/profile/partial/dashboard.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    Your Kiqs
+    Your styles and needs
 
     <div>
       <a ui-sref='profile.kiqs' class='btn btn-info'>
@@ -26,5 +26,10 @@
 <div class="panel panel-default">
   <div class="panel-body">
     Add credit card
+    <div>
+      <a ui-sref='profile.edit.billing' class='btn btn-info'>
+        Add credit card
+      </a>
+    </div>
   </div>
 </div>
