--- a/app/assets/javascripts/templates/profile/edit_billing.html
+++ b/app/assets/javascripts/templates/profile/edit_billing.html
@@ -1,1 +1,10 @@
-billing 
+<div flash-alert active-class="in alert" class="fade text-center">
+  <span class="alert-message">{{ flash.message }}</span>
+</div>
+
+<form stripe-form='handleStripe'>
+  <input ng-model='number' placeholder='Card Number' payments-format='card' name='card' />
+  <input ng-model='expiry' placeholder='Expiration' payments-format='expiry' name='expiry' />
+  <input ng-model='cvc' placeholder='CVC' payments-format='cvc' name='cvc' />
+  <button type='submit'>Complete</button>
+</form>
