Add Create, update for credit card in angular

--- a/app/assets/javascripts/templates/profile/edit_billing.html
+++ b/app/assets/javascripts/templates/profile/edit_billing.html
@@ -8,3 +8,7 @@
   <input ng-model='cvc' placeholder='CVC' payments-format='cvc' name='cvc' />
   <button type='submit'>Complete</button>
 </form>
+
+<pre>
+  {{ customer }}
+</pre>
