--- a/app/assets/javascripts/templates/profile/edit.html
+++ b/app/assets/javascripts/templates/profile/edit.html
@@ -3,11 +3,11 @@
 
   <div class="col-md-3">
 
-    <ul>
-      <li><a ui-sref='profile.edit.profile'>Profile</a></li>
-      <li><a ui-sref='profile.edit.shipping'>Shipping</a></li>
-      <li><a ui-sref='profile.edit.billing'>Billing</a></li>
-      <li><a ui-sref='profile.edit.size'>Size</a></li>
+    <ul class='nav'>
+      <li ui-sref-active='active'><a ui-sref='profile.edit.profile'>Profile</a></li>
+      <li ui-sref-active='active'><a ui-sref='profile.edit.shipping'>Shipping</a></li>
+      <li ui-sref-active='active'><a ui-sref='profile.edit.billing'>Billing</a></li>
+      <li ui-sref-active='active'><a ui-sref='profile.edit.size'>Size</a></li>
     </ul>
 
   </div>
