--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,3 +1,19 @@
 .ng-invalid {
   color: red;
 }
+
+.scratched {
+  text-decoration: line-through;
+}
+
+.navbar-inverse {
+  background-color: #fff;
+
+  .navbar-brand {
+    color: #000;
+  }
+
+  .navbar-nav > li > a {
+    color: #000;
+  }
+}
