Add DELETE call in angular

--- a/app/assets/javascripts/templates/profile/edit_billing.html
+++ b/app/assets/javascripts/templates/profile/edit_billing.html
@@ -9,6 +9,8 @@
   <button type='submit'>Complete</button>
 </form>
 
+  <button ng-click='deleteCard()'>Remove</button>
+
 <pre>
   {{ customer }}
 </pre>
