--- a/app/assets/javascripts/templates/profile/edit_size.html
+++ b/app/assets/javascripts/templates/profile/edit_size.html
@@ -3,23 +3,31 @@
 </div>
 
 <form id='profile-form' ng-submit='updateUser()'>
-  <label for="height">Height</label>
-  <input type="number" value='height' id='height' class='form-control' ng-model='user.height'>
+  <div class="row">
+    <div class="col-md-5">
 
-  <label for="weight">Weight</label>
-  <input type="number" value='weight' id='weight' class='form-control' ng-model='user.weight'>
+      <h4>Your sizes</h4>
 
-  <label for="casual-shirt-size">Casual Shirt Size</label>
-  <select class="form-control" name='casual-shirt-size' ng-model="user.casual_shirt_size">
-    <option value='xs'>XS</option>
-    <option value='s'>S</option>
-    <option value='m'>M</option>
-    <option value='l'>L</option>
-    <option value='xl'>XL</option>
-    <option value='xxl'>XXL</option>
-    <option value='other'>Other</option>
-  </select>
+      <label for="height">Height</label>
+      <input type="number" value='height' id='height' class='form-control' ng-model='user.height'>
 
+      <label for="weight">Weight</label>
+      <input type="number" value='weight' id='weight' class='form-control' ng-model='user.weight'>
 
-  <button type='submit' class='btn btn-success'>Complete</button>
+      <label for="casual-shirt-size">Casual Shirt Size</label>
+      <select class="form-control" name='casual-shirt-size' ng-model="user.casual_shirt_size">
+        <option value='xs'>XS</option>
+        <option value='s'>S</option>
+        <option value='m'>M</option>
+        <option value='l'>L</option>
+        <option value='xl'>XL</option>
+        <option value='xxl'>XXL</option>
+        <option value='other'>Other</option>
+      </select>
+
+      <div class="form-actions">
+        <button type='submit' class='btn btn-success'>Complete</button>
+      </div>
+    </div>
+  </div>
 </form>
