--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -6,14 +6,7 @@
   text-decoration: line-through;
 }
 
-.navbar-inverse {
+.edit-panel {
   background-color: #fff;
-
-  .navbar-brand {
-    color: #000;
-  }
-
-  .navbar-nav > li > a {
-    color: #000;
-  }
+  padding: 30px;
 }
