Kiqs are now styles

--- a/app/assets/javascripts/templates/profile/partial/dashboard.html
+++ b/app/assets/javascripts/templates/profile/partial/dashboard.html
@@ -3,7 +3,7 @@
     Your styles and needs
 
     <div>
-      <a ui-sref='profile.kiqs' class='btn btn-info'>
+      <a ui-sref='profile.styles' class='btn btn-info'>
         View <span class="glyphicon glyphicon-circle-arrow-right"></span>
       </a>
     </div>
@@ -32,6 +32,6 @@
         Add credit card
       </a>
     </div>
-    
+
   </div>
 </div>
