Add max budget settings

--- a/app/assets/javascripts/templates/profile/kiqs.html
+++ b/app/assets/javascripts/templates/profile/kiqs.html
@@ -3,7 +3,7 @@
     <div ng-include="'profile/partial/stylist.html'"></div>
   </aside>
 
-  <div class="col-md-9">
-    <div ng-include="'profile/partial/styles_form.html'"></div>
+  <div class="col-md-9 item-container">
+    <div ng-include="'profile/partial/kiqs_form.html'"></div>
   </div>
 </div>
