--- a/app/assets/javascripts/templates/profile/edit.html
+++ b/app/assets/javascripts/templates/profile/edit.html
@@ -12,7 +12,7 @@
 
   </div>
 
-  <div class="col-md-9 edit-panel">
+  <div class="col-md-9 item-container">
     <div ui-view></div>
   </div>
 </div>
