Add waist and inseam

--- a/app/assets/javascripts/templates/profile/edit_size.html
+++ b/app/assets/javascripts/templates/profile/edit_size.html
@@ -25,6 +25,40 @@
         <option value='other'>Other</option>
       </select>
 
+      <label for="waist">Waist</label>
+      <select class='form-control' name='waist' ng-model='user.waist'>
+        <option value="0">I don't know</option>
+        <option value='28'>28</option>
+        <option value='29'>29</option>
+        <option value='30'>30</option>
+        <option value='31'>31</option>
+        <option value='32'>32</option>
+        <option value='33'>33</option>
+        <option value='34'>34</option>
+        <option value='35'>35</option>
+        <option value='36'>36</option>
+        <option value='37'>37</option>
+        <option value='38'>38</option>
+        <option value='39'>39</option>
+        <option value='40'>40</option>
+        <option value='40'>40</option>
+        <option value='41'>41</option>
+        <option value='42'>42</option>
+        <option value='999'>Other</option>
+      </select>
+
+      <label for="inseam">Inseam</label>
+      <select class='form-control' name='inseam' ng-model='user.inseam'>
+        <option value='0'>I don't know.</option>
+        <option value='28'>28</option>
+        <option value='30'>29</option>
+        <option value='32'>32</option>
+        <option value='34'>34</option>
+        <option value='36'>36</option>
+        <option value='999'>Other</option>
+      </select>
+
+
       <div class="form-actions">
         <button type='submit' class='btn btn-success'>Complete</button>
       </div>
