--- a/app/assets/javascripts/templates/profile/partial/kiqs_form.html
+++ b/app/assets/javascripts/templates/profile/partial/kiqs_form.html
@@ -79,7 +79,7 @@
 
     <label ng-show='user.pants'>
       Pants
-      <select class="form-control" ng-model="user.patns_max_budget">
+      <select class="form-control" ng-model="user.pants_max_budget">
         <option value='-1'>I'm not sure yet.</option>
         <option value='100'>$50 - $100</option>
         <option value='150'>$100 - $150</option>
