--- a/app/assets/javascripts/templates/profile/edit_size.html
+++ b/app/assets/javascripts/templates/profile/edit_size.html
@@ -26,7 +26,7 @@
       </select>
 
       <label for="waist">Waist</label>
-      <select class='form-control' name='waist' ng-model='user.waist'>
+      <select class='form-control' id='waist' ng-model='user.waist'>
         <option value="0">I don't know</option>
         <option value='28'>28</option>
         <option value='29'>29</option>
@@ -48,7 +48,7 @@
       </select>
 
       <label for="inseam">Inseam</label>
-      <select class='form-control' name='inseam' ng-model='user.inseam'>
+      <select class='form-control' id='inseam' ng-model='user.inseam'>
         <option value='0'>I don't know.</option>
         <option value='28'>28</option>
         <option value='30'>29</option>
