--- a/app/assets/javascripts/templates/profile/main.html
+++ b/app/assets/javascripts/templates/profile/main.html
@@ -2,10 +2,14 @@
   <aside class="col-md-3">
     <div ng-include="'profile/partial/stylist.html'"></div>
 
-    <a href="#" class='btn btn-success'>Request a Kiq</a>
+    <a class='btn btn-success' ng-click='requestKiq()'>Request a Kiq</a>
   </aside>
 
   <div class="col-md-9">
+    <div flash-alert active-class="in alert" class="fade text-center">
+      <span class="alert-message">{{ flash.message }}</span>
+    </div>
+
     <div ng-include="'profile/partial/dashboard.html'"></div>
   </div>
 </div>
