Rename Kiqs to Style in signup form to resolve bug

--- a/app/assets/javascripts/templates/signup_form/form.html
+++ b/app/assets/javascripts/templates/signup_form/form.html
@@ -10,7 +10,7 @@
       <div id="status-buttons" class="text-center">
         <a ui-sref-active='active' ui-sref='.measurements'><span>1</span> About you</a>
         <a ui-sref-active='active' ui-sref='.needs' ng-click='checkInput1($event)'><span>2</span> Needs</a>
-        <a ui-sref-active='active' ui-sref='.kiqs' ng-click='checkInput2($event)'><span>3</span> Kiqs</a>
+        <a ui-sref-active='active' ui-sref='.styles' ng-click='checkInput2($event)'><span>3</span> Styles</a>
         <a ui-sref-active='active' ui-sref='.account' ng-click='checkInput2($event)'><span>4</span> Account</a>
       </div>
 
