Improve profile display

--- a/app/assets/javascripts/templates/profile/partial/stylist.html
+++ b/app/assets/javascripts/templates/profile/partial/stylist.html
@@ -1,2 +1,5 @@
+<img src="/stylists/1.jpg" alt="{{user.stylist.firstname}}" class='stylist-avatar'>
+
 <h3>{{ user.stylist.firstname }} {{ user.stylist.lastname }}</h3>
 <p>Your personal stylist</p>
+<p>{{ user.stylist.phone_number }}</p>
