--- a/app/assets/javascripts/templates/profile/orders.html
+++ b/app/assets/javascripts/templates/profile/orders.html
@@ -4,7 +4,7 @@
     <div flash-alert active-class="in alert" class="fade text-center">
       <span class="alert-message">{{ flash.message }}</span>
     </div>
-    
+
     <h3>My Orders</h3>
 
     <table class='table'>
@@ -23,7 +23,7 @@
           <td>{{ kiq.status }}</td>
           <td>
             <a ng-show="kiq.status == 'requested'" ng-click='cancelKiq(kiq)'>Cancel</a>
-            <a ng-show="kiq.status == 'completed'">Feedback</a>
+            <!-- <a ng-show="kiq.status == 'completed'">Feedback</a> -->
           </td>
         </tr>
       </tbody>
