--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -16,3 +16,17 @@
     background-color: $gray;
   }
 }
+
+.stylist-avatar {
+  border-radius: 100%;
+  height: 200px;
+  width: 200px;
+}
+
+.panel-body {
+  padding: 30px 80px;
+
+  h3 {
+    margin-top: 10.5px
+  }
+}
