--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
       <% else %>
 
         <li><%= link_to 'Login', new_user_session_path, target: '_self' %></li>
-        <li><a href="#">How it works</a></li>
+        <li><a href="/">Find More</a></li>
         <li><a href="/signup/measurements">Get started</a></li>
 
       <% end %>
