--- a/app/assets/javascripts/templates/profile/kiqs.html
+++ b/app/assets/javascripts/templates/profile/kiqs.html
@@ -1,9 +1,11 @@
-<div class="row">
-  <aside class="col-md-3">
-    <div ng-include="'profile/partial/stylist.html'"></div>
-  </aside>
+<div class="container">
+  <div class="row">
+    <aside class="col-md-3">
+      <div ng-include="'profile/partial/stylist.html'"></div>
+    </aside>
 
-  <div class="col-md-9 item-container">
-    <div ng-include="'profile/partial/kiqs_form.html'"></div>
+    <div class="col-md-9 item-container">
+      <div ng-include="'profile/partial/kiqs_form.html'"></div>
+    </div>
   </div>
 </div>
