--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
 
   <%= render 'layouts/header' %>
 
-  <div class='container'>
-    <%= yield %>
-  </div>
+  <%= yield %>
+
+  <%= render 'layouts/footer' if controller.controller_name == 'static_pages' %>
 
   <%= debug(params) if Rails.env.development? %>
 
