--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 animated hiding" data-animation="fadeInUp">
-        <ul class="social list-inline ">
+        <ul class='list-inline footer-menu'>
+          <li>
+            <%= link_to 'FAQ', help_path %>
+          </li>
+        </ul>
+
+
+        <ul class="social list-inline">
           <li>
             <a class="facebook" target='_blank' href="https://www.facebook.com/pages/Sidekiq/1567555646824870" title="Facebook">
               <i class="fa fa-facebook fa-2x"></i>
